--- a/index.html
+++ b/index.html
@@ -161,10 +161,13 @@
             <div class="row justify-content-center">
                 <div class="col-lg-6">
                     <div class="section_title text-center mb-90">
-                        <h3 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s" style="font-size:25px;">Our Team</h3>
+                        <h1 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s" style="font-size:35px;">Our Team</h1>
+                        <h3 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s" style="font-size:15px; font-family: cursive;"><br>Hasan Faraz Khan | Abdullah Tahir | Mohsin Khan | Zamam Farhat<br></h3>
+                        <h3 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s" style="font-size:15px; font-family: cursive;">Students at Department of Computer Science, Aligarh</h3>
                     </div>
                 </div>
             </div>
+            <!--
             <div class="row">
                 <div class="col-lg-3 col-md-6">
                     <div class="single_team wow fadeInUp" data-wow-duration="1s" data-wow-delay=".2s">
@@ -248,6 +251,7 @@
                             <p>Content Writer</p>
                             <p>Student | Computer Science Department</p>
                         </div>
+                        -->
                     </div>
                 </div>
             </div>
@@ -266,7 +270,7 @@
                                         <div class="quote">
                                             <img src="img/testmonial/quote.svg" alt="">
                                         </div>
-                                        <p>Ignorance is the Mother of proverty..... </p>
+                                        <p>Ignorance is the Mother of poverty..... </p>
                                         <div class="testmonial_author">
                                             <div class="thumb">
                                                     <img src="img/testmonial/thumb.png" alt="">
@@ -281,7 +285,7 @@
                                         <div class="quote">
                                             <img src="img/testmonial/quote.svg" alt="">
                                         </div>
-                                        <p>When a nation become devoid of arts and learning ,it invites proverty.And when proverty comes,it brings in its wake thousands of crimes. </p>
+                                        <p>When a nation become devoid of arts and learning ,it invites poverty.And when proverty comes,it brings in its wake thousands of crimes. </p>
                                         <div class="testmonial_author">
                                             <div class="thumb">
                                                     <img src="img/testmonial/thumb.png" alt="">
